# namu

./: .gitignore  Cargo.toml  README.md  triage_vectors.tsv
benches/: eager_ternary_ref_bench.cpp  eager_ternary_ref_bench.rs  reduction.rs
rocq_proofs/: _CoqProject  extract_triage.v  terms.v
src/: lib.rs  parser.rs  programs.rs  rocq_tests.rs  stdlib.rs  tree.rs
